--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <script src= "js/jquery-2.1.3.js"></script>
 
+    <script type="text/javascript" src="phonegap.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+
 
 
 </head>
