--- a/survey.html
+++ b/survey.html
@@ -10,9 +10,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script type="text/javascript" src="jquery.bootpag.js"></script>
 
     <script src= "js/jquery-2.1.3.js"></script>
+    <script type="text/javascript" src="js/jquery.bootpag.js"></script>
     <script src= "js/main.js"></script>
 
 </head>
@@ -65,10 +65,23 @@
                     class="btn btn-info"
                     onclick="startSurvey(this)"
                     name="start-survey">START SURVEY</button>
-
         </p>
 
     </div>
+
+    <p id='p-form-buttons' class="text-center" hidden>
+
+        <button class='btn btn-info' onclick='getQuestion(this)'
+        id='button-previous' type='button' name='submit' value='previous'>Prev</button>
+
+        <button class='btn btn-info' onclick='getQuestion(this)'
+        id='button-next' type='button' name='submit' value='next'>Next</button>
+
+        <br />
+        <button class='btn btn-info' onclick='getQuestion(this)' id='button-skip'
+        type='button' name='submit' value='skip'>Skip</button>
+
+    </p>
 
 
     <!-- <div class="container">
