--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
                             <div class="panel-heading" style="background-color: rgba(245, 245, 245, 0.4);">                                
                                 <div class="row-fluid user-row" style="align: center; ">
-                                    <img src="img/ecompas.png" class="img-responsive" style="height: 150px; width: 150px"/>
+                                    <!-- <img src="img/ecompas.png" class="img-responsive" style="height: 150px; width: 150px"/> -->
+                                    <img src="img/rdelogo.png" />
                                 </div>
                             </div>
                             <div class="panel-body">
