--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="container">
                 <div class="row vertical-offset-100">
                     <div class="col-md-4 col-md-offset-4" style="text-align: center">
-                        <br><br> <br><br> <br><br> <br><br> <br><br> <br><br>
+                        <br><br> <br><br> <br><br> <br><br>  
                         <div class="panel panel-default" style="background-color: rgba(245, 245, 245, 0.4); text-align: center">
 
                             <div class="panel-heading" style="background-color: rgba(245, 245, 245, 0.4);">                                
@@ -95,8 +95,10 @@
                                             <div class="login_result"><p id="p-message"></p></div>
                                         </label>
                                         <br />
-										<label class="">TOS</label>
-                                        <input class="form-control" placeholder="TOS" name="tos" type="checkbox">
+
+                                        <a href="#tos" data-toggle="modal"><label class="">TOS</label></a>
+
+                                        <input class="" placeholder="TOS" name="tos" type="checkbox">
                                         <input class="form-control" placeholder="Enter Code" id="input-s_code" name='s_code' type="text">
                                         <br></br>
                                         <input class="btn btn-lg btn-success btn-block" onclick='accountLogin(this)' type="button" id="login" value="Start Survey">
@@ -110,6 +112,76 @@
                     </div>
                 </div>
             </div>
+    </div>
+
+
+
+    <div class="modal fade" id="tos" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <form class="form-horizontal" role="form">
+                    <div class="modal-header">
+                        <h4 style="color: black;">Terms Of Service</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="" class="col-sm-2 control-label">Privacy</label>
+                            <div class="col-sm-10">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                    lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                    habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                    egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                    felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                    venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                    sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                    luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                    at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                    aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                    id porta pulvinar
+                                </p>
+                            </div>
+                            <label for="" class="col-sm-2 control-label">Information Usage</label>
+                            <div class="col-sm-10">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                    lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                    habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                    egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                    felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                    venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                    sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                    luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                    at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                    aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                    id porta pulvinar
+                                </p>
+                            </div>
+                            <label for="" class="col-sm-2 control-label">Article 1.2.4</label>
+                            <div class="col-sm-10">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                    lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                    habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                    egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                    felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                    venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                    sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                    luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                    at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                    aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                    id porta pulvinar
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <a class="btn btn-default" data-dismiss="modal">Close</a>
+
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
     </div>
     </body>
     
