Implemented a progress bar and Alert Notifications

--- a/survey.html
+++ b/survey.html
@@ -75,6 +75,14 @@
 
 
 
+                        <div id="message">
+                            <div style="padding: 5px;">
+
+                                <div id='div-alert-text' class="alert" role="alert"></div>
+
+                            </div>
+                        </div>
+
                         <div id="div-content">
 
                             <p class="text-center">
@@ -109,6 +117,14 @@
                                 value='skip'
                                 class="btn btn-primary">
                                 <span class="glyphicon glyphicon-arrow-right">   SKIP </span></a>
+
+                            <div class="progress">
+                                <div id='div-progress' class="progress-bar" role="progressbar" aria-valuenow="70"
+                                     aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                    70%
+                                </div>
+                            </div>
+
                         </div>
 
 
@@ -141,8 +157,7 @@
         <button class='btn btn-info' onclick='getQuestion(this)' id='button-skip'
         type='button' name='submit' value='skip'>Skip</button>
 
-    </p>
-    -->
+    </p> -->
 
 <!-- THIS IS FOR THE MODAL CONTACT PAGE, HIDDEN ON STARTUP-->
     <div class="modal fade" id="contact" role="dialog">
@@ -181,7 +196,7 @@
         </div>
     </div>
 
-</div> -->
+</div>
     <!-- /.container -->
 
 </div>
