Progress Update fix

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <form id="form-login" accept-charset="UTF-8" role="form" class="form-signin" action="survey.html">
                                     <fieldset>
                                         <label class="panel-login">
-                                            <div class="login_result"><p id="p-message"></p></div>
+                                            <div class="login_result"><p id="p-message" class="text-danger bg-warning"></p></div>
                                         </label>
                                         <br />
 
