--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link href="css/styles.css" rel="stylesheet">
         
         <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">          </script> -->
-		<script src= "js/jquery-2.1.3.js"></script>
+		<script src= "js/jquery-2.1.3.min.js"></script>
         <script src= "js/jquery.cookie.js"></script>
 		<script src= "js/main.js"></script>
 		<!-- <script src= "js/bootstrap.js"></script> -->
