--- a/survey.html
+++ b/survey.html
@@ -11,7 +11,8 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-    <script src= "js/jquery-2.1.3.js"></script>
+    <script src= "js/jquery-2.1.3.min.js"></script>
+    <script src= "js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/jquery.bootpag.js"></script>
     <script src= "js/main.js"></script>
 
@@ -23,7 +24,7 @@
 <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="slide-nav">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-toggle">
+            <a id='a-navbar-toggle' class="navbar-toggle">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -43,7 +44,7 @@
             s
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Survey Page</a></li>
-                <li><a href="#about">Terms of Agreement</a></li>
+                <li><a href="#tos" data-toggle="modal">Terms of Agreement</a></li>
                 <li><a href="#contact" data-toggle="modal">Contact</a></li>
                 <li><a onclick="logout(this)" href="#exit">Logout</a></li>
                 <li><button type="button" onclick="config(this)" class="btn btn-primary">Settings</button></li>
@@ -206,7 +207,7 @@
                         <div class="form-group">
                             <label for="contact-message" class="col-sm-2 control-label">Message</label>
                             <div class="col-sm-10">
-                                <textarea class="form-control" rows="4"></textarea>
+                                <textarea id="contact-message" class="form-control" rows="4"></textarea>
                             </div>
                         </div>
                     </div>
@@ -243,6 +244,75 @@
         </div>
     </div>
 </div>
+
+
+<!-- Terms of Service Modal -->
+<div class="modal fade" id="tos" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="form-horizontal" role="form">
+                <div class="modal-header">
+                    <h4 style="color: black;">Terms Of Service</h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="" class="col-sm-2 control-label">Privacy</label>
+                        <div class="col-sm-10">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                id porta pulvinar
+                            </p>
+                        </div>
+                        <label for="" class="col-sm-2 control-label">Information Usage</label>
+                        <div class="col-sm-10">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                id porta pulvinar
+                            </p>
+                        </div>
+                        <label for="" class="col-sm-2 control-label">Article 1.2.4</label>
+                        <div class="col-sm-10">
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque
+                                lacinia urna nisi, mollis sodales ex ullamcorper congue. Pellentesque
+                                habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                                egestas. Cras sit amet turpis vel magna auctor porttitor vulputate sed
+                                felis. Phasellus posuere, ligula a cursus tincidunt, enim lectus
+                                venenatis orci, ac dictum turpis dolor eget augue. Fusce maximus lorem
+                                sit amet quam venenatis cursus in non leo. In mollis, est sed dapibus
+                                luctus, sapien justo ornare enim, in ornare leo odio ut ante. Pellentesque
+                                at dignissim mauris. Integer sed mollis ex. Nulla facilisis consectetur
+                                aliquam. Cras maximus porttitor est in cursus. Morbi eleifend odio
+                                id porta pulvinar
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-default" data-dismiss="modal">Close</a>
+
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
 
     <!-- /.container -->
 
