--- a/survey.html
+++ b/survey.html
@@ -18,208 +18,213 @@
 
 </head>
 <body>
-<input id="input-ip" type="hidden" name="ip" value="192.168.1.14">
+<div id="div-content-wrapper">
+
+    <input id="input-ip" type="hidden" name="ip" value="192.168.1.14">
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="slide-nav">
+        <div class="container">
+            <div class="navbar-header">
+                <a id='a-navbar-toggle' class="navbar-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+                <a class="navbar-brand" href="#">RDE Systems Survey</a>
+            </div>
+            <div id="slidemenu">
 
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation" id="slide-nav">
-    <div class="container">
-        <div class="navbar-header">
-            <a id='a-navbar-toggle' class="navbar-toggle">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </a>
-            <a class="navbar-brand" href="#">RDE Systems Survey</a>
-        </div>
-        <div id="slidemenu">
+                <form class="navbar-form navbar-right" role="form">
+                    <div class="form-group">
+                        <input type="search" placeholder="search" class="form-control">
+                    </div>
+                    <button type="button" class="btn btn-primary">Search</button>
+                </form>
+                s
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Survey Page</a></li>
+                    <li><a href="#tos" data-toggle="modal">Terms of Agreement</a></li>
+                    <li><a href="#contact" data-toggle="modal">Contact</a></li>
+                    <li><a onclick="logout(this)" href="#exit">Logout</a></li>
+                    <li><button type="button" onclick="config(this)" class="btn btn-primary">Settings</button></li>
 
-
-            <form class="navbar-form navbar-right" role="form">
-                <div class="form-group">
-                    <input type="search" placeholder="search" class="form-control">
-                </div>
-                <button type="button" class="btn btn-primary">Search</button>
-            </form>
-            s
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Survey Page</a></li>
-                <li><a href="#tos" data-toggle="modal">Terms of Agreement</a></li>
-                <li><a href="#contact" data-toggle="modal">Contact</a></li>
-                <li><a onclick="logout(this)" href="#exit">Logout</a></li>
-                <li><button type="button" onclick="config(this)" class="btn btn-primary">Settings</button></li>
-
-            </ul>
-
+                </ul>
+                <div style="clear: both"></div>
+            </div>
         </div>
     </div>
-</div>
 
 
-<!--wrap the page content do not style this -->
-<div id="page-content">
+    <!--wrap the page content do not style this -->
+    <div id="page-content">
 
-    <div class="container">
+        <div class="container">
 
-        <div class="row">
-            <div class="col-md-8"></div>
-            <div class="col-md-4">
-                <div class="panel panel-default">
-                    <div class="panel-body">
+            <div class="row">
+                <div class="col-md-8"></div>
+                <div class="col-md-4">
+                    <div class="panel panel-default">
+                        <div class="panel-body">
 
-                        <div id="message">
-                            <div style="padding: 5px;">
+                            <div id="message">
+                                <div style="padding: 5px;">
 
-                                <div id='div-alert-text' class="alert" role="alert"></div>
+                                    <div id='div-alert-text' class="alert" role="alert"></div>
 
-                            </div>
-                        </div>
-
-                        <div id="div-content">
-
-                            <p class="text-center">
-
-                                <button id="button-start-survey"
-                                        type="button"
-                                        class="btn btn-success"
-                                        onclick="startSurvey(this)"
-                                        name="start-survey">START SURVEY</button>
-
-                            </p>
-
-                        </div>
-
-                        <br />
-                        <br />
-                        <br />
-
-                        <div id='p-form-buttons' style="text-align:center" hidden >
-
-                            <div class="btn-group" role="group" aria-label="">
-                                <a  onclick='getQuestion(this)'
-                                                              id='button-previous'
-                                                              value='previous'
-                                                              class="btn btn-primary">
-                                    <span class="glyphicon glyphicon-arrow-left"> PREV</span>
-                                </a>
-
-                                <a  onclick='getQuestion(this)'
-                                    id='button-skip'
-                                    value='skip'
-                                    class="btn btn-info">
-                                    <span class="">   SKIP </span>
-                                </a>
-
-
-                                <a  onclick='getQuestion(this)'
-                                                          id='button-next'
-                                                          value='next'
-                                                          class="btn btn-success">
-                                    <span class="glyphicon glyphicon-arrow-right">   SAVE</span>
-                                </a>
-
-                            </div>
-                            <br />
-                            <br />
-
-
-                           <!-- <a  onclick='getQuestion(this)'
-                                id='button-previous'
-                                value='previous'
-                                class="btn btn-primary">
-                                <span class="glyphicon glyphicon-arrow-left"></span></a>
-
-                            <a  onclick='getQuestion(this)'
-                                id='button-next'
-                                value='next'
-                                class="btn btn-primary">
-                                <span class="glyphicon glyphicon-arrow-right"></span></a>
-
-                            <br />
-                            <a  onclick='getQuestion(this)'
-                                id='button-skip'
-                                value='skip'
-                                class="btn btn-primary">
-                                <span class="glyphicon glyphicon-arrow-right">   SKIP </span></a>
-                            -->
-                            <div class="progress">
-                                <div id='div-progress' class="progress-bar" role="progressbar" aria-valuenow="70"
-                                     aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                    70%
                                 </div>
                             </div>
 
+                            <div id="div-content">
+
+                                <p class="text-center">
+
+                                    <button id="button-start-survey"
+                                            type="button"
+                                            class="btn btn-success"
+                                            onclick="startSurvey(this)"
+                                            name="start-survey">START SURVEY</button>
+
+                                </p>
+
+                            </div>
+
+                            <br />
+                            <br />
+                            <br />
+
+                            <div id='p-form-buttons' style="text-align:center" hidden >
+
+                                <div class="btn-group" role="group" aria-label="">
+                                    <a  onclick='getQuestion(this)'
+                                                                  id='button-previous'
+                                                                  value='previous'
+                                                                  class="btn btn-primary">
+                                        <span class="glyphicon glyphicon-arrow-left"> PREV</span>
+                                    </a>
+
+                                    <a  onclick='getQuestion(this)'
+                                        id='button-skip'
+                                        value='skip'
+                                        class="btn btn-info">
+                                        <span class="">   SKIP </span>
+                                    </a>
+
+
+                                    <a  onclick='getQuestion(this)'
+                                                              id='button-next'
+                                                              value='next'
+                                                              class="btn btn-success">
+                                        <span class="glyphicon glyphicon-arrow-right">   SAVE</span>
+                                    </a>
+
+                                </div>
+                                <br />
+                                <br />
+
+
+                               <!-- <a  onclick='getQuestion(this)'
+                                    id='button-previous'
+                                    value='previous'
+                                    class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-arrow-left"></span></a>
+
+                                <a  onclick='getQuestion(this)'
+                                    id='button-next'
+                                    value='next'
+                                    class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-arrow-right"></span></a>
+
+                                <br />
+                                <a  onclick='getQuestion(this)'
+                                    id='button-skip'
+                                    value='skip'
+                                    class="btn btn-primary">
+                                    <span class="glyphicon glyphicon-arrow-right">   SKIP </span></a>
+                                -->
+                                <div class="progress">
+                                    <div id='div-progress' class="progress-bar" role="progressbar" aria-valuenow="70"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:70%">
+                                        70%
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+
+
+
+
+
                         </div>
-
-
-
-
-
-
-
                     </div>
                 </div>
             </div>
         </div>
+
+
+
+
+
+
+        <!--
+        <p id='p-form-buttons' class="text-center" hidden>
+
+            <button class='btn btn-info' onclick='getQuestion(this)'
+            id='button-previous' type='button' name='submit' value='previous'>Prev</button>
+
+            <button class='btn btn-info' onclick='getQuestion(this)'
+            id='button-next' type='button' name='submit' value='next'>Next</button>
+
+            <br />
+            <button class='btn btn-info' onclick='getQuestion(this)' id='button-skip'
+            type='button' name='submit' value='skip'>Skip</button>
+
+        </p> -->
+
+
+
     </div>
 
-
-
-
-
-
-    <!--
-    <p id='p-form-buttons' class="text-center" hidden>
-
-        <button class='btn btn-info' onclick='getQuestion(this)'
-        id='button-previous' type='button' name='submit' value='previous'>Prev</button>
-
-        <button class='btn btn-info' onclick='getQuestion(this)'
-        id='button-next' type='button' name='submit' value='next'>Next</button>
-
-        <br />
-        <button class='btn btn-info' onclick='getQuestion(this)' id='button-skip'
-        type='button' name='submit' value='skip'>Skip</button>
-
-    </p> -->
+</div>
 
 <!-- THIS IS FOR THE MODAL CONTACT PAGE, HIDDEN ON STARTUP-->
-    <div class="modal fade" id="contact" role="dialog">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <form class="form-horizontal" role="form">
-                    <div class="modal-header">
-                        <h4 style="color: white;">Contact US<h4>
-                    </div>
-                    <div class="modal-body">
-                        <div class="form-group">
-                            <label for="contact-name" class="col-sm-2 control-label">Name</label>
-                            <div class="col-sm-10">
-                                <input type="text" class="form-control" id="contact-name" placeholder="First & Last Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="contact-email" class="col-sm-2 control-label">Email</label>
-                            <div class="col-sm-10">
-                                <input type="email" class="form-control" id="contact-email" placeholder="example@domain.com">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <label for="contact-message" class="col-sm-2 control-label">Message</label>
-                            <div class="col-sm-10">
-                                <textarea id="contact-message" class="form-control" rows="4"></textarea>
-                            </div>
+<div class="modal fade" id="contact" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <form class="form-horizontal" role="form">
+                <div class="modal-header">
+                    <h4 style="color: white;">Contact US<h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label for="contact-name" class="col-sm-2 control-label">Name</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" id="contact-name" placeholder="First & Last Name">
                         </div>
                     </div>
-                    <div class="modal-footer">
-                        <a class="btn btn-default" data-dismiss="modal">Close</a>
-                        <button type="submit" class="btn btn-primary">Send</button>
+                    <div class="form-group">
+                        <label for="contact-email" class="col-sm-2 control-label">Email</label>
+                        <div class="col-sm-10">
+                            <input type="email" class="form-control" id="contact-email" placeholder="example@domain.com">
+                        </div>
                     </div>
-                </form>
-            </div>
+                    <div class="form-group">
+                        <label for="contact-message" class="col-sm-2 control-label">Message</label>
+                        <div class="col-sm-10">
+                            <textarea id="contact-message" class="form-control" rows="4"></textarea>
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <a class="btn btn-default" data-dismiss="modal">Close</a>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                </div>
+            </form>
         </div>
     </div>
-
 </div>
 
 <!-- SURVEY FINISHED MODAL CONTAINER -->
