--- a/survey.html
+++ b/survey.html
@@ -12,6 +12,14 @@
     <link href="css/style.css" rel="stylesheet">
 
     <script src= "js/jquery-2.1.3.min.js"></script>
+
+    <script>
+        $(document).bind("mobileinit", function(){
+            $.event.special.swipe.horizontalDistanceThreshold = 60;
+            //$.event.special.swipe.verticalDistanceThreshold 75px;
+        });
+    </script>
+
     <script src= "js/jquery.mobile-1.4.5.min.js"></script>
     <script type="text/javascript" src="js/jquery.bootpag.js"></script>
     <script src= "js/main.js"></script>
@@ -66,7 +74,7 @@
                 <div class="col-md-8"></div>
                 <div class="col-md-4">
                     <div class="panel panel-default">
-                        <div class="panel-body">
+                        <div id="div-panel-md4-body" class="panel-body">
 
                             <div id="message">
                                 <div style="padding: 5px;">
