--- a/survey.html
+++ b/survey.html
@@ -15,8 +15,19 @@
 
     <script>
         $(document).bind("mobileinit", function(){
-            $.event.special.swipe.horizontalDistanceThreshold = 60;
-            //$.event.special.swipe.verticalDistanceThreshold 75px;
+
+            // (default: 10) (pixels) – More than this horizontal displacement, and we will suppress scrolling.
+            $.event.special.swipe.scrollSupressionThreshold = (screen.availWidth) / 60;
+
+            // (default: 30) (pixels) – Swipe horizontal displacement must be less than this.
+            $.event.special.swipe.horizontalDistanceThreshold = (screen.availWidth) / 60;
+
+            // (default: 75) (pixels) – Swipe vertical displacement must be less than this.
+            // $.event.special.swipe.verticalDistanceThreshold = (screen.availHeight) / 13;
+
+            // (default: 1000) (milliseconds) – More time than this, and it isn't a swipe.
+            $.event.special.swipe.durationThreshold = 1000;
+
         });
     </script>
 
