--- a/survey.html
+++ b/survey.html
@@ -135,7 +135,7 @@
                                                               id='button-next'
                                                               value='next'
                                                               class="btn btn-success">
-                                        <span class="glyphicon glyphicon-arrow-right">   SAVE</span>
+                                        <span class="glyphicon glyphicon-arrow-right">   NEXT</span>
                                     </a>
 
                                 </div>
