--- a/survey.html
+++ b/survey.html
@@ -126,7 +126,7 @@
                                     <a  onclick='getQuestion(this)'
                                         id='button-skip'
                                         value='skip'
-                                        class="btn btn-info">
+                                        class="btn btn-primary">
                                         <span class="">   SKIP </span>
                                     </a>
 
