--- a/index.html
+++ b/index.html
@@ -98,10 +98,12 @@
                                         <br />
 
                                         <a href="#tos" data-toggle="modal"><label class="">Accept Terms of Service</label></a>
+<br />
 
+                                        <input id="input-tos" class="" name="tos" type="checkbox"
+                                                style=" -webkit-transform: scale(2.5)">
                                         <br />
-
-                                        <input id="input-tos" class="" name="tos" type="checkbox">
+                                        <br />
 
                                         <input class="form-control" placeholder="Enter Code" id="input-s_code" name='s_code' type="text">
                                         <br/>
