google maps update

--- a/survey.html
+++ b/survey.html
@@ -262,7 +262,7 @@
             </div>
             <div class="modal-footer" style="background-color:#F8F8F8">
                 <button type="button" class="btn btn-warning" data-dismiss="modal">Back</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal">View Map</button>
+                <button onclick="getGoogleMap()" type="button" class="btn btn-primary" data-dismiss="modal">View Map</button>
                 <button onclick="logout(this)" type="button" class="btn btn-success">Finished</button>
             </div>
         </div>
