--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>RDE Systems</title>
         <meta name="viewport" content="width-device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet">
-        <link href="css/styles.css" rel="stylesheet">
+        <!-- <link href="css/style.css" rel="stylesheet"> -->
         
         <!--  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js">          </script> -->
 		<script src= "js/jquery-2.1.3.min.js"></script>
@@ -12,7 +12,7 @@
 		<script src= "js/main.js"></script>
 		<!-- <script src= "js/bootstrap.js"></script> -->
 	
-		<script type="text/javascript" src="jquery.bootpag.js"></script>
+		<!-- <script type="text/javascript" src="js/jquery.bootpag.js"></script> -->
         
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script> -->
